# pacman.c

./: .dockerignore  .gitignore  CMakeLists.txt  README.md  build.sh  lua_mod.c  lua_mod.h  pacman.c
.github/workflows/: pages.yml
cmake/: embed_mod.cmake  mods_embed.c.in
docker/: Dockerfile.native  Dockerfile.wasm  README.md
mods/: README.md  aggressive_blinky.lua  default.lua  full_lua_ghosts.lua  random_clyde.lua  slow_pacman.lua
scripts/: stage-pages.sh  vendor-monaco.sh
web/: mod_editor.js  mod_lab.html  mod_loader.js  shell_mod.html
